# warframe-farming-planner

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
.claude/: launch.json
.claude/hooks/: block-dangerous-git.sh
examples/: have_parts.json  inventory.sample.json  owned.json  wishlist.json
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  App.test.jsx  styles.css
frontend/src/components/ui/: accordion.jsx  badge.jsx  button.jsx  card.jsx  input.jsx  label.jsx  separator.jsx  textarea.jsx
src/warframe_routes/: __init__.py  acquisition.py  blueprint_costs.py  catalog.py  cli.py  data.py  effort.py  inventory.py  items.py  market.py  optimize.py  private_inventory.py  service.py  sync.py  web.py  worldstate.py
tests/: test_acquisition.py  test_blueprint_costs.py  test_cli.py  test_data.py  test_effort.py  test_items.py  test_market.py  test_optimize.py  test_private_inventory.py  test_service.py  test_sync.py  test_web.py  test_worldstate.py
